@@ -184,26 +184,6 @@ not."))
 (defmethod ->string ((n cyco-node))
   (sformat "~A name: ~A" (type-of n)(name n)))
 
-(defmethod ? ((n cyco-node))
-  (format t "~A~%" (type-of n))
-  (format t "  name       : ~A~%" (name n))
-  (format t "  remarks    : ~A~%" (remarks n))
-  (format t "  parent     : ")
-  (if (root-p n)
-      (format t "<root>~%")
-    (format t "~A~%" (name (parent n))))
-  (format t "  children   : ")
-  (if (zerop (length (children n)))
-      (format t "None~%")
-    (progn
-      (format t "~%")
-      (dolist (c (children n))
-	(format t "      ~12A ~A~%" (type-of c)(name c)))))
-  (format t "  transient  : ~A~%" (transientp n))
-  (format t "  properties :~%")
-  (dolist (k (property-keys n))
-    (format t "      [~24A] --> ~A~%" k (property n k))))
-
 (constant +NULL-NODE+ (make-instance 'cyco-node))
 
 (let ((found nil))
