@@ -269,47 +269,6 @@ Child nodes of an instrument must also be instruments."
        (sformat "Attempt to connect non-instrument ~A to instrument ~A"
 		(name child-instrument)(name parent-instrument)))
     (call-next-method)))
-
-(defmethod ? ((n instrument))
-  (format t "~A~%" (type-of n))
-  (format t "  name       : ~A~%" (name n))
-  (format t "  remarks    : ~A~%" (remarks n))
-  (format t "  parent     : ")
-  (if (root-p n)
-      (format t "<root>~%")
-    (format t "~A~%" (name (parent n))))
-  (format t "  children   : ")
-  (if (zerop (length (children n)))
-      (format t "None~%")
-    (progn
-      (format t "~%")
-      (dolist (c (children n))
-	(format t "      ~12A ~A~%" (type-of c)(name c)))))
-  (format t "  properties :~%")
-  (dolist (k '(:channel :program-number :program-bank))
-    (format t "      [~24A] --> ~A~%" k (property n k)))
-  ;; Interactive menu
-  (format t "Options: ~%")
-  (format t "   A   - Articulation map~%")
-  (format t "   D   - Dynamic map~%")
-  (format t "   K   - Key map~%")
-  (format t "   P   - Program map~%")
-  (format t "   Q   - Quit~%")
-  (let ((option (string-upcase (->string (read-char)))))
-    (cond ((string= option "Q")
-	   (format t "~%"))
-	  ((string= option "A")
-	   (format t "~%;; ~A~%" (name n))
-	   (funcall (articulation-map n) :doc))
-	  ((string= option "D")
-	   (format t "~%;; ~A~%" (name n))
-	   (funcall (dynamic-map n) :doc))
-	  ((string= option "K")
-	   (format t "~%;; ~A~%" (name n))
-	   (funcall (keynumber-map n) :doc))
-	  ((string= option "P")
-	   (format t "~%;; ~A~%" (name n))
-	   (funcall (program-map n) 0.0 :program :doc)))))
   
 (defmethod print-tree ((instrument instrument) &optional (depth 0))
   (format t "[~2D] ~A" (channel instrument :resolve) (spaces (* 4 depth)))
